bugfix/ETSL-466 css changes for alignment issues
css changes for alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/_mixins.scss
+++ b/ui.frontend/src/main/webpack/etisalat/_mixins.scss
@@ -5,7 +5,7 @@
     
   }
 @mixin  arrow-after-link{
-    border: solid $arrow-border;
+    border: solid $arrow-border-green;
     border-width: 0 1px 1px 0;
     content: '';
     display: inline-block;
