--- a/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
@@ -1,7 +1,7 @@
 
 
 .no-padding-container {
-    padding: 1.5rem  !important;
+    padding: 0px!important;
 
     @include md{
         padding-left: 1rem !important;
@@ -30,7 +30,7 @@
         }
 
         .cmp-teaser__content {
-            padding: 1.5rem 4rem 1.5rem 1.5rem;
+            padding: 0.5rem 4rem 1.5rem 1.5rem;
             width: 50%;
 
             @include sm {
